--- a/super-core-net/pom.xml
+++ b/super-core-net/pom.xml
@@ -191,8 +191,8 @@
             <artifactId>super-core</artifactId>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.springframework.cloud</groupId>-->
-            <!--<artifactId>spring-cloud-starter-eureka</artifactId>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-starter-eureka</artifactId>-->
         <!--</dependency>-->
 
         <dependency>
@@ -213,4 +213,21 @@
         </dependency>
 
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>alimaven</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+
+        <repository>
+            <id>ssj-rdc-releases</id>
+            <url>https://repo.rdc.aliyun.com/repository/114597-release-3Z5X3y/</url>
+        </repository>
+        <repository>
+            <id>ssj-rdc-snapshots</id>
+            <url>https://repo.rdc.aliyun.com/repository/114597-snapshot-uyzwCu/</url>
+        </repository>
+    </repositories>
 </project>
