--- a/super-core-web-res/pom.xml
+++ b/super-core-web-res/pom.xml
@@ -197,15 +197,32 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter</artifactId>-->
-            <!--<scope>provided</scope>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter</artifactId>-->
+        <!--<scope>provided</scope>-->
         <!--</dependency>-->
 
         <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-web</artifactId>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter-web</artifactId>-->
         <!--</dependency>-->
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>alimaven</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+
+        <repository>
+            <id>ssj-rdc-releases</id>
+            <url>https://repo.rdc.aliyun.com/repository/114597-release-3Z5X3y/</url>
+        </repository>
+        <repository>
+            <id>ssj-rdc-snapshots</id>
+            <url>https://repo.rdc.aliyun.com/repository/114597-snapshot-uyzwCu/</url>
+        </repository>
+    </repositories>
 
 </project>
