--- a/super-core-web-security/pom.xml
+++ b/super-core-web-security/pom.xml
@@ -214,4 +214,21 @@
 
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>alimaven</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+
+        <repository>
+            <id>ssj-rdc-releases</id>
+            <url>https://repo.rdc.aliyun.com/repository/114597-release-3Z5X3y/</url>
+        </repository>
+        <repository>
+            <id>ssj-rdc-snapshots</id>
+            <url>https://repo.rdc.aliyun.com/repository/114597-snapshot-uyzwCu/</url>
+        </repository>
+    </repositories>
+
 </project>
