[feature] rename maven repository

--- a/pom.xml
+++ b/pom.xml
@@ -764,7 +764,7 @@
 
     <distributionManagement>
         <repository>
-            <id>ssj-rdc-releases</id>
+            <id>scj-rdc-releases</id>
             <url>https://repo.rdc.aliyun.com/repository/114597-release-3Z5X3y/</url>
         </repository>
 
@@ -783,7 +783,7 @@
         </repository>
 
         <repository>
-            <id>ssj-rdc-releases</id>
+            <id>scj-rdc-releases</id>
             <url>https://repo.rdc.aliyun.com/repository/114597-release-3Z5X3y/</url>
         </repository>
 
