--- a/super-core-database-sharding-jdbc/pom.xml
+++ b/super-core-database-sharding-jdbc/pom.xml
@@ -209,7 +209,7 @@
         </repository>
 
         <repository>
-            <id>ssj-rdc-snapshots</id>
+            <id>scj-rdc-snapshots</id>
             <url>https://repo.rdc.aliyun.com/repository/114597-snapshot-uyzwCu/</url>
         </repository>
     </repositories>
