--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,9 @@
         <alipay.version>4.7.12.ALL</alipay.version>
 
         <feign.form.version>3.8.0</feign.form.version>
+
+        <!-- 分布式事务 -->
+        <tx-lcn.version>5.0.2.RELEASE</tx-lcn.version>
     </properties>
 
     <!-- maven功能说明 -->
@@ -662,6 +665,19 @@
                 <groupId>io.github.openfeign.form</groupId>
                 <artifactId>feign-form-spring</artifactId>
                 <version>${feign.form.version}</version>
+            </dependency>
+
+            <!-- 分布式事务 -->
+            <dependency>
+                <groupId>com.codingapi.txlcn</groupId>
+                <artifactId>txlcn-tc</artifactId>
+                <version>${tx-lcn.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.codingapi.txlcn</groupId>
+                <artifactId>txlcn-txmsg-netty</artifactId>
+                <version>${tx-lcn.version}</version>
             </dependency>
 
         </dependencies>
