--- a/super-core-database/pom.xml
+++ b/super-core-database/pom.xml
@@ -215,12 +215,10 @@
             <artifactId>mybatis-plus-generator</artifactId>
         </dependency>
 
-
-
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.flywaydb</groupId>-->
+        <!--<artifactId>flyway-core</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
