--- a/super-core-web-rpc-feign/pom.xml
+++ b/super-core-web-rpc-feign/pom.xml
@@ -181,34 +181,32 @@
     </parent>
 
     <!-- 本项目信息 -->
-    <artifactId>super-core-database-querydsl</artifactId>
-    <version>${core-database-querydsl.version}</version>
+    <artifactId>super-core-web-rpc-feign</artifactId>
+    <version>${core-web-rpc-feign.version}</version>
 
     <dependencies>
-        <dependency>
-            <groupId>vip.isass</groupId>
-            <artifactId>super-core</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>vip.isass</groupId>
-            <artifactId>super-core-database</artifactId>
+            <artifactId>super-core-web</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-apt</artifactId>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-jpa</artifactId>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form-spring</artifactId>
         </dependency>
+
+
     </dependencies>
 
     <repositories>
@@ -229,29 +227,4 @@
         </repository>
     </repositories>
 
-    <build>
-        <plugins>
-            <!--<plugin>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-            <!--</plugin>-->
-            <plugin>
-                <groupId>com.mysema.maven</groupId>
-                <artifactId>apt-maven-plugin</artifactId>
-                <version>1.1.3</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>process</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>target/generated-sources</outputDirectory>
-                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
