--- a/super-core-database-mysql/pom.xml
+++ b/super-core-database-mysql/pom.xml
@@ -181,34 +181,23 @@
     </parent>
 
     <!-- 本项目信息 -->
-    <artifactId>super-core-database-querydsl</artifactId>
-    <version>${core-database-querydsl.version}</version>
+    <artifactId>super-core-database-mysql</artifactId>
+    <version>${core-database-mysql.version}</version>
 
     <dependencies>
-        <dependency>
-            <groupId>vip.isass</groupId>
-            <artifactId>super-core</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>vip.isass</groupId>
             <artifactId>super-core-database</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-apt</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-jpa</artifactId>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
         </dependency>
     </dependencies>
 
@@ -229,30 +218,4 @@
             <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>
         </repository>
     </repositories>
-
-    <build>
-        <plugins>
-            <!--<plugin>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-            <!--</plugin>-->
-            <plugin>
-                <groupId>com.mysema.maven</groupId>
-                <artifactId>apt-maven-plugin</artifactId>
-                <version>1.1.3</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>process</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>target/generated-sources</outputDirectory>
-                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
