--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <!-- spring -->
+        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
         <spring.cloud.version>Greenwich.SR3</spring.cloud.version>
 
         <alibaba-nacos.version>2.1.0.RELEASE</alibaba-nacos.version>
