--- a/super-core-cache/pom.xml
+++ b/super-core-cache/pom.xml
@@ -199,6 +199,12 @@
             <groupId>javax.cache</groupId>
             <artifactId>cache-api</artifactId>
         </dependency>
+
+        <!-- redis 的默认实现 lettuce 用到连接池-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.ehcache</groupId>-->
         <!--<artifactId>ehcache</artifactId>-->
