--- a/super-core-database-mybatisplus-postgresql/src/main/resources/spy.properties
+++ b/super-core-database-mybatisplus-postgresql/src/main/resources/spy.properties
@@ -166,6 +166,24 @@
 # Library.
 #
 #
-
+# 实际驱动可多个
 driverlist=org.postgresql.Driver
+# 使用日志系统记录 sql
 appender=com.p6spy.engine.spy.appender.Slf4JLogger
+# 以下为 mybatis plus 配置
+#3.2.1以上使用
+modulelist=com.baomidou.mybatisplus.extension.p6spy.MybatisPlusLogFactory,com.p6spy.engine.outage.P6OutageFactory
+# 自定义日志打印
+#logMessageFormat=com.baomidou.mybatisplus.extension.p6spy.P6SpyLogger
+# 设置 p6spy driver 代理
+deregisterdrivers=true
+# 取消JDBC URL前缀
+useprefix=true
+# 配置记录 Log 例外,可去掉的结果集有error,info,batch,debug,statement,commit,rollback,result,resultset.
+excludecategories=info,debug,result,commit,resultset
+# 日期格式
+dateformat=yyyy-MM-dd HH:mm:ss
+# 是否开启慢SQL记录
+outagedetection=true
+# 慢SQL记录标准 2 秒
+outagedetectioninterval=2
