--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
     <!-- 本项目信息 -->
     <groupId>vip.isass</groupId>
     <artifactId>super</artifactId>
-    <version>super.1.1.0-SNAPSHOT</version>
+    <version>super.3.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -227,35 +227,34 @@
         <!--<netty.version>4.1.15.Final</netty.version>-->
         <netty.version>4.1.36.Final</netty.version>
 
-        <super-core.version>super.1.1.0-SNAPSHOT</super-core.version>
-        <core-protobuf.version>super.1.1.0-SNAPSHOT</core-protobuf.version>
-        <core-cache.version>super.1.1.0-SNAPSHOT</core-cache.version>
-        <core-mongobd.version>super.1.1.0-SNAPSHOT</core-mongobd.version>
-        <core-database.version>super.1.1.0-SNAPSHOT</core-database.version>
-        <core-database-sharding-jdbc.version>super.1.1.0-SNAPSHOT</core-database-sharding-jdbc.version>
-        <core-database-postgresql.version>super.1.1.0-SNAPSHOT</core-database-postgresql.version>
-        <core-database-mysql.version>super.1.1.0-SNAPSHOT</core-database-mysql.version>
-        <core-database-querydsl.version>super.1.1.0-SNAPSHOT</core-database-querydsl.version>
-        <core-database-mybatisplus.version>super.1.1.0-SNAPSHOT</core-database-mybatisplus.version>
-        <core-database-mybatisplus-postgresql.version>super.1.1.0-SNAPSHOT
+        <super-core.version>super.3.0.0-SNAPSHOT</super-core.version>
+        <core-protobuf.version>super.3.0.0-SNAPSHOT</core-protobuf.version>
+        <core-cache.version>super.3.0.0-SNAPSHOT</core-cache.version>
+        <core-mongobd.version>super.3.0.0-SNAPSHOT</core-mongobd.version>
+        <core-database.version>super.3.0.0-SNAPSHOT</core-database.version>
+        <core-database-sharding-jdbc.version>super.3.0.0-SNAPSHOT</core-database-sharding-jdbc.version>
+        <core-database-postgresql.version>super.3.0.0-SNAPSHOT</core-database-postgresql.version>
+        <core-database-mysql.version>super.3.0.0-SNAPSHOT</core-database-mysql.version>
+        <core-database-querydsl.version>super.3.0.0-SNAPSHOT</core-database-querydsl.version>
+        <core-database-mybatisplus.version>super.3.0.0-SNAPSHOT</core-database-mybatisplus.version>
+        <core-database-mybatisplus-postgresql.version>super.3.0.0-SNAPSHOT
         </core-database-mybatisplus-postgresql.version>
 
-        <core-database-listener.version>super.1.1.0-SNAPSHOT</core-database-listener.version>
+        <core-database-listener.version>super.3.0.0-SNAPSHOT</core-database-listener.version>
 
-
-        <core-mq.version>super.1.1.0-SNAPSHOT</core-mq.version>
-        <core-mq-ons.version>super.1.1.0-SNAPSHOT</core-mq-ons.version>
-        <core-net.version>super.1.1.0-SNAPSHOT</core-net.version>
-        <core-net-tcp.version>super.1.1.0-SNAPSHOT</core-net-tcp.version>
-        <core-net-websocket.version>super.1.1.0-SNAPSHOT</core-net-websocket.version>
-        <core-web.version>super.1.1.0-SNAPSHOT</core-web.version>
-        <core-web-security.version>super.1.1.0-SNAPSHOT</core-web-security.version>
-        <core-web-res.version>super.1.1.0-SNAPSHOT</core-web-res.version>
-        <core-web-rpc-feign.version>super.1.1.0-SNAPSHOT</core-web-rpc-feign.version>
-        <core-web-swagger.version>super.1.1.0-SNAPSHOT</core-web-swagger.version>
-        <core-log.version>super.1.1.0-SNAPSHOT</core-log.version>
-        <core-elasticsearch.version>super.1.1.0-SNAPSHOT</core-elasticsearch.version>
-        <core-encryption.version>super.1.1.0-SNAPSHOT</core-encryption.version>
+        <core-mq.version>super.3.0.0-SNAPSHOT</core-mq.version>
+        <core-mq-ons.version>super.3.0.0-SNAPSHOT</core-mq-ons.version>
+        <core-net.version>super.3.0.0-SNAPSHOT</core-net.version>
+        <core-net-tcp.version>super.3.0.0-SNAPSHOT</core-net-tcp.version>
+        <core-net-websocket.version>super.3.0.0-SNAPSHOT</core-net-websocket.version>
+        <core-web.version>super.3.0.0-SNAPSHOT</core-web.version>
+        <core-web-security.version>super.3.0.0-SNAPSHOT</core-web-security.version>
+        <core-web-res.version>super.3.0.0-SNAPSHOT</core-web-res.version>
+        <core-web-rpc-feign.version>super.3.0.0-SNAPSHOT</core-web-rpc-feign.version>
+        <core-web-swagger.version>super.3.0.0-SNAPSHOT</core-web-swagger.version>
+        <core-log.version>super.3.0.0-SNAPSHOT</core-log.version>
+        <core-elasticsearch.version>super.3.0.0-SNAPSHOT</core-elasticsearch.version>
+        <core-encryption.version>super.3.0.0-SNAPSHOT</core-encryption.version>
 
         <skywalking.version>6.6.0</skywalking.version>
 
@@ -532,11 +531,12 @@
                 <version>${flyway.version}</version>
             </dependency>
 
-            <!--<dependency>-->
-            <!--<groupId>com.baomidou</groupId>-->
-            <!--<artifactId>mybatis-plus</artifactId>-->
-            <!--<version>${mybatis-plus.version}</version>-->
-            <!--</dependency>-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <version>${dynamic-datasource.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
