--- a/pom.xml
+++ b/pom.xml
@@ -288,7 +288,7 @@
         <hystrix-javanica.version>1.5.18</hystrix-javanica.version>
         <freemarker.version>2.3.28</freemarker.version>
 
-        <xxl-job.version>2.1.2</xxl-job.version>
+        <xxl-job.version>2.2.0</xxl-job.version>
 
         <jasypt.version>2.1.1</jasypt.version>
         <!--<elasticsearch.version>7.2.0</elasticsearch.version>-->
@@ -304,6 +304,8 @@
 
         <!-- 分布式事务 -->
         <tx-lcn.version>5.0.2.RELEASE</tx-lcn.version>
+
+        <findbugs.version>3.0.1</findbugs.version>
     </properties>
 
     <!-- maven功能说明 -->
@@ -714,6 +716,12 @@
                 <version>${tx-lcn.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>annotations</artifactId>
+                <version>${findbugs.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -770,6 +778,11 @@
         <dependency>
             <groupId>org.apache.skywalking</groupId>
             <artifactId>apm-toolkit-trace</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
         </dependency>
 
     </dependencies>
