[optimize] 优化 isass-api 版本命名

--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,36 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+        <!-- start isass-core -->
+
+        <super-core.version>super.3.0.0-SNAPSHOT</super-core.version>
+        <core-cache.version>super.3.0.0-SNAPSHOT</core-cache.version>
+        <core-database.version>super.3.0.0-SNAPSHOT</core-database.version>
+        <core-database-mybatisplus.version>super.3.0.0-SNAPSHOT</core-database-mybatisplus.version>
+        <core-database-mybatisplus-postgresql.version>super.3.0.0-SNAPSHOT
+        </core-database-mybatisplus-postgresql.version>
+        <core-database-mysql.version>super.3.0.0-SNAPSHOT</core-database-mysql.version>
+        <core-database-postgresql.version>super.3.0.0-SNAPSHOT</core-database-postgresql.version>
+        <core-database-querydsl.version>super.3.0.0-SNAPSHOT</core-database-querydsl.version>
+        <core-database-sharding-jdbc.version>super.3.0.0-SNAPSHOT</core-database-sharding-jdbc.version>
+        <core-elasticsearch.version>super.3.0.0-SNAPSHOT</core-elasticsearch.version>
+        <core-encryption.version>super.3.0.0-SNAPSHOT</core-encryption.version>
+        <core-mq.version>super.3.0.0-SNAPSHOT</core-mq.version>
+        <core-mq-ons.version>super.3.0.0-SNAPSHOT</core-mq-ons.version>
+        <core-net.version>super.3.0.0-SNAPSHOT</core-net.version>
+        <core-net-tcp.version>super.3.0.0-SNAPSHOT</core-net-tcp.version>
+        <core-net-websocket.version>super.3.0.0-SNAPSHOT</core-net-websocket.version>
+        <core-protobuf.version>super.3.0.0-SNAPSHOT</core-protobuf.version>
+        <core-web.version>super.3.0.0-SNAPSHOT</core-web.version>
+        <core-web-res.version>super.3.0.0-SNAPSHOT</core-web-res.version>
+        <core-web-rpc-feign.version>super.3.0.0-SNAPSHOT</core-web-rpc-feign.version>
+        <core-web-security.version>super.3.0.0-SNAPSHOT</core-web-security.version>
+        <core-web-swagger.version>super.3.0.0-SNAPSHOT</core-web-swagger.version>
+        <core-mongobd.version>super.3.0.0-SNAPSHOT</core-mongobd.version>
+        <core-database-listener.version>super.3.0.0-SNAPSHOT</core-database-listener.version>
+
+        <!-- end isass-core -->
+
         <!-- spring -->
         <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
         <spring.cloud.version>Hoxton.SR3</spring.cloud.version>
@@ -226,35 +256,6 @@
         <alibaba-nacos.version>2.2.1.RELEASE</alibaba-nacos.version>
         <!--<netty.version>4.1.15.Final</netty.version>-->
         <netty.version>4.1.36.Final</netty.version>
-
-        <super-core.version>super.3.0.0-SNAPSHOT</super-core.version>
-        <core-protobuf.version>super.3.0.0-SNAPSHOT</core-protobuf.version>
-        <core-cache.version>super.3.0.0-SNAPSHOT</core-cache.version>
-        <core-mongobd.version>super.3.0.0-SNAPSHOT</core-mongobd.version>
-        <core-database.version>super.3.0.0-SNAPSHOT</core-database.version>
-        <core-database-sharding-jdbc.version>super.3.0.0-SNAPSHOT</core-database-sharding-jdbc.version>
-        <core-database-postgresql.version>super.3.0.0-SNAPSHOT</core-database-postgresql.version>
-        <core-database-mysql.version>super.3.0.0-SNAPSHOT</core-database-mysql.version>
-        <core-database-querydsl.version>super.3.0.0-SNAPSHOT</core-database-querydsl.version>
-        <core-database-mybatisplus.version>super.3.0.0-SNAPSHOT</core-database-mybatisplus.version>
-        <core-database-mybatisplus-postgresql.version>super.3.0.0-SNAPSHOT
-        </core-database-mybatisplus-postgresql.version>
-
-        <core-database-listener.version>super.3.0.0-SNAPSHOT</core-database-listener.version>
-
-        <core-mq.version>super.3.0.0-SNAPSHOT</core-mq.version>
-        <core-mq-ons.version>super.3.0.0-SNAPSHOT</core-mq-ons.version>
-        <core-net.version>super.3.0.0-SNAPSHOT</core-net.version>
-        <core-net-tcp.version>super.3.0.0-SNAPSHOT</core-net-tcp.version>
-        <core-net-websocket.version>super.3.0.0-SNAPSHOT</core-net-websocket.version>
-        <core-web.version>super.3.0.0-SNAPSHOT</core-web.version>
-        <core-web-security.version>super.3.0.0-SNAPSHOT</core-web-security.version>
-        <core-web-res.version>super.3.0.0-SNAPSHOT</core-web-res.version>
-        <core-web-rpc-feign.version>super.3.0.0-SNAPSHOT</core-web-rpc-feign.version>
-        <core-web-swagger.version>super.3.0.0-SNAPSHOT</core-web-swagger.version>
-        <core-log.version>super.3.0.0-SNAPSHOT</core-log.version>
-        <core-elasticsearch.version>super.3.0.0-SNAPSHOT</core-elasticsearch.version>
-        <core-encryption.version>super.3.0.0-SNAPSHOT</core-encryption.version>
 
         <skywalking.version>6.6.0</skywalking.version>
 
@@ -291,6 +292,7 @@
         <xxl-job.version>2.2.0</xxl-job.version>
 
         <jasypt.version>2.1.1</jasypt.version>
+
         <!--<elasticsearch.version>7.2.0</elasticsearch.version>-->
 
         <poi-ooxml.version>4.1.0</poi-ooxml.version>
@@ -824,6 +826,27 @@
 
         </plugins>
     </build>
+
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public License Version 3</name>
+            <url>http://www.gnu.org/licenses/lgpl.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <tag>master</tag>
+        <url>https://gitee.com/isass/super.git</url>
+        <connection>https://gitee.com/isass/super.git</connection>
+        <developerConnection>https://gitee.com/isass/super.git</developerConnection>
+    </scm>
+    <developers>
+        <developer>
+            <name>Rain Lee</name>
+            <email>lizhirong100@163.com</email>
+            <organization>isass</organization>
+        </developer>
+    </developers>
 
     <distributionManagement>
         <repository>
