--- a/super-core-database-mysql/pom.xml
+++ b/super-core-database-mysql/pom.xml
@@ -182,7 +182,7 @@
 
     <!-- 本项目信息 -->
     <artifactId>super-core-database-mysql</artifactId>
-    <version>${core-database-mysql.version}</version>
+    <version>super.3.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
