--- a/super-core-elasticsearch/pom.xml
+++ b/super-core-elasticsearch/pom.xml
@@ -182,7 +182,7 @@
 
     <!-- 本项目信息 -->
     <artifactId>super-core-elasticsearch</artifactId>
-    <version>${core-elasticsearch.version}</version>
+    <version>super.3.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
