--- a/super-core-mq-ons/pom.xml
+++ b/super-core-mq-ons/pom.xml
@@ -182,7 +182,7 @@
 
     <!-- 本项目信息 -->
     <artifactId>super-core-mq-ons</artifactId>
-    <version>${core-mq-ons.version}</version>
+    <version>super.3.0.0-SNAPSHOT</version>
 
     <dependencies>
 
