--- a/super-core-net-websocket/pom.xml
+++ b/super-core-net-websocket/pom.xml
@@ -182,7 +182,7 @@
 
     <!-- 本项目信息 -->
     <artifactId>super-core-net-websocket</artifactId>
-    <version>${core-net-websocket.version}</version>
+    <version>super.3.0.0-SNAPSHOT</version>
 
     <dependencies>
 
