--- a/super-core-net/pom.xml
+++ b/super-core-net/pom.xml
@@ -182,7 +182,7 @@
 
     <!-- 本项目信息 -->
     <artifactId>super-core-net</artifactId>
-    <version>${core-net.version}</version>
+    <version>super.3.0.0-SNAPSHOT</version>
 
     <dependencies>
 
@@ -203,7 +203,7 @@
         <dependency>
             <groupId>vip.isass</groupId>
             <artifactId>super-core-protobuf</artifactId>
-            <version>${core-protobuf.version}</version>
+            <version>super.3.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
