--- a/super-core-web-swagger/pom.xml
+++ b/super-core-web-swagger/pom.xml
@@ -182,7 +182,7 @@
 
     <!-- 本项目信息 -->
     <artifactId>super-core-web-swagger</artifactId>
-    <version>${core-web-swagger.version}</version>
+    <version>super.3.0.0-SNAPSHOT</version>
 
     <dependencies>
 
