--- a/pom.xml
+++ b/pom.xml
@@ -804,7 +804,80 @@
                 </includes>
             </resource>
         </resources>
+
         <plugins>
+            <!--生成 Source jar 文件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--生成Javadoc，关闭doclint,避免注解检查不通过-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--Maven GPG插件用于使用以下配置对组件进行签名-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--Nexus Staging Maven插件是将组件部署到OSSRH并将其发布到Central Repository的推荐方法-->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+
+            <!-- release plugin,用于发布到release仓库部署插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <!--                <version>2.5.3</version>-->
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -834,12 +907,14 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <scm>
         <tag>master</tag>
         <url>https://gitee.com/isass/super.git</url>
         <connection>https://gitee.com/isass/super.git</connection>
         <developerConnection>https://gitee.com/isass/super.git</developerConnection>
     </scm>
+
     <developers>
         <developer>
             <name>Rain Lee</name>
@@ -849,15 +924,20 @@
     </developers>
 
     <distributionManagement>
-        <repository>
-            <id>isass-rdc-releases</id>
-            <url>https://repo.rdc.aliyun.com/repository/119151-release-MRcouB/</url>
-        </repository>
-
         <snapshotRepository>
-            <id>isass-rdc-snapshots</id>
-            <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
+
+        <!--        <repository>-->
+        <!--            <id>isass-rdc-releases</id>-->
+        <!--            <url>https://repo.rdc.aliyun.com/repository/119151-release-MRcouB/</url>-->
+        <!--        </repository>-->
+
+        <!--        <snapshotRepository>-->
+        <!--            <id>isass-rdc-snapshots</id>-->
+        <!--            <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>-->
+        <!--        </snapshotRepository>-->
     </distributionManagement>
 
     <repositories>
