[maven-release-plugin] prepare release super.3.0.0-RELEASE

--- a/super-core-database/pom.xml
+++ b/super-core-database/pom.xml
@@ -3,7 +3,7 @@
   ~                    GNU LESSER GENERAL PUBLIC LICENSE
   ~                        Version 3, 29 June 2007
   ~
-  ~  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
+  ~  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org />
   ~  Everyone is permitted to copy and distribute verbatim copies
   ~  of this license document, but changing it is not allowed.
   ~
@@ -168,21 +168,19 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- 父项目信息 -->
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.0.0-SNAPSHOT</version>
+        <version>super.3.0.0-RELEASE</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-database</artifactId>
-    <version>super.3.0.0-SNAPSHOT</version>
+    <version>super.3.0.0-RELEASE</version>
 
     <dependencies>
         <dependency>
