--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   ~                    GNU LESSER GENERAL PUBLIC LICENSE
   ~                        Version 3, 29 June 2007
   ~
-  ~  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
+  ~  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org />
   ~  Everyone is permitted to copy and distribute verbatim copies
   ~  of this license document, but changing it is not allowed.
   ~
@@ -168,9 +168,7 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- 父项目信息 -->
@@ -183,7 +181,7 @@
     <!-- 本项目信息 -->
     <groupId>vip.isass</groupId>
     <artifactId>super</artifactId>
-    <version>super.3.0.0-SNAPSHOT</version>
+    <version>super.3.0.0-RELEASE</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -221,29 +219,29 @@
 
         <!-- start isass-core -->
 
-        <super-core.version>super.3.0.0-SNAPSHOT</super-core.version>
-        <core-cache.version>super.3.0.0-SNAPSHOT</core-cache.version>
-        <core-database.version>super.3.0.0-SNAPSHOT</core-database.version>
-        <core-database-mybatisplus.version>super.3.0.0-SNAPSHOT</core-database-mybatisplus.version>
-        <core-database-mybatisplus-postgresql.version>super.3.0.0-SNAPSHOT
+        <super-core.version>super.3.0.0-RELEASE</super-core.version>
+        <core-cache.version>super.3.0.0-RELEASE</core-cache.version>
+        <core-database.version>super.3.0.0-RELEASE</core-database.version>
+        <core-database-mybatisplus.version>super.3.0.0-RELEASE</core-database-mybatisplus.version>
+        <core-database-mybatisplus-postgresql.version>super.3.0.0-RELEASE
         </core-database-mybatisplus-postgresql.version>
-        <core-database-mysql.version>super.3.0.0-SNAPSHOT</core-database-mysql.version>
-        <core-database-postgresql.version>super.3.0.0-SNAPSHOT</core-database-postgresql.version>
-        <core-database-querydsl.version>super.3.0.0-SNAPSHOT</core-database-querydsl.version>
-        <core-database-sharding-jdbc.version>super.3.0.0-SNAPSHOT</core-database-sharding-jdbc.version>
-        <core-elasticsearch.version>super.3.0.0-SNAPSHOT</core-elasticsearch.version>
-        <core-encryption.version>super.3.0.0-SNAPSHOT</core-encryption.version>
-        <core-mq.version>super.3.0.0-SNAPSHOT</core-mq.version>
-        <core-mq-ons.version>super.3.0.0-SNAPSHOT</core-mq-ons.version>
-        <core-net.version>super.3.0.0-SNAPSHOT</core-net.version>
-        <core-net-tcp.version>super.3.0.0-SNAPSHOT</core-net-tcp.version>
-        <core-net-websocket.version>super.3.0.0-SNAPSHOT</core-net-websocket.version>
-        <core-protobuf.version>super.3.0.0-SNAPSHOT</core-protobuf.version>
-        <core-web.version>super.3.0.0-SNAPSHOT</core-web.version>
-        <core-web-res.version>super.3.0.0-SNAPSHOT</core-web-res.version>
-        <core-web-rpc-feign.version>super.3.0.0-SNAPSHOT</core-web-rpc-feign.version>
-        <core-web-security.version>super.3.0.0-SNAPSHOT</core-web-security.version>
-        <core-web-swagger.version>super.3.0.0-SNAPSHOT</core-web-swagger.version>
+        <core-database-mysql.version>super.3.0.0-RELEASE</core-database-mysql.version>
+        <core-database-postgresql.version>super.3.0.0-RELEASE</core-database-postgresql.version>
+        <core-database-querydsl.version>super.3.0.0-RELEASE</core-database-querydsl.version>
+        <core-database-sharding-jdbc.version>super.3.0.0-RELEASE</core-database-sharding-jdbc.version>
+        <core-elasticsearch.version>super.3.0.0-RELEASE</core-elasticsearch.version>
+        <core-encryption.version>super.3.0.0-RELEASE</core-encryption.version>
+        <core-mq.version>super.3.0.0-RELEASE</core-mq.version>
+        <core-mq-ons.version>super.3.0.0-RELEASE</core-mq-ons.version>
+        <core-net.version>super.3.0.0-RELEASE</core-net.version>
+        <core-net-tcp.version>super.3.0.0-RELEASE</core-net-tcp.version>
+        <core-net-websocket.version>super.3.0.0-RELEASE</core-net-websocket.version>
+        <core-protobuf.version>super.3.0.0-RELEASE</core-protobuf.version>
+        <core-web.version>super.3.0.0-RELEASE</core-web.version>
+        <core-web-res.version>super.3.0.0-RELEASE</core-web-res.version>
+        <core-web-rpc-feign.version>super.3.0.0-RELEASE</core-web-rpc-feign.version>
+        <core-web-security.version>super.3.0.0-RELEASE</core-web-security.version>
+        <core-web-swagger.version>super.3.0.0-RELEASE</core-web-swagger.version>
         <core-mongobd.version>super.3.0.0-SNAPSHOT</core-mongobd.version>
         <core-database-listener.version>super.3.0.0-SNAPSHOT</core-database-listener.version>
 
@@ -998,7 +996,7 @@
     </licenses>
 
     <scm>
-        <tag>master</tag>
+        <tag>super.3.0.0-RELEASE</tag>
         <url>https://gitee.com/isass/super</url>
         <connection>scm:git:git@gitee.com:isass/super.git</connection>
         <developerConnection>scm:git:git@gitee.com:isass/super.git</developerConnection>
