--- a/super-core-net/pom.xml
+++ b/super-core-net/pom.xml
@@ -175,12 +175,12 @@
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.0.0-RELEASE</version>
+        <version>super.3.0.1-SNAPSHOT</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-net</artifactId>
-    <version>super.3.0.0-RELEASE</version>
+    <version>super.3.0.1-SNAPSHOT</version>
 
     <dependencies>
 
@@ -201,7 +201,7 @@
         <dependency>
             <groupId>vip.isass</groupId>
             <artifactId>super-core-protobuf</artifactId>
-            <version>super.3.0.0-RELEASE</version>
+            <version>super.3.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
